--- a/estatevintage.html
+++ b/estatevintage.html
@@ -126,23 +126,8 @@
     <h1 class="script">Estate & Vintage</h1> 
     <p><i class="fa fa-quote-left fa-2x quote"></i><i>Estate and Vintage jewelry offer you a present with both a past and future.</i></p>   
     <div class="ui stackable grid">
-
-      <div class="five wide column">
-        <p class="dropdown-label">REFINE PRODUCTS</p>
-        <div class="ui selection dropdown">
-          <input type="hidden" name="refine">
-          <i class="dropdown icon"></i>
-          <div class="default text">Newest</div>
-          <div class="menu">
-            <div class="item" data-value="2">Newest</div>
-            <div class="item" data-value="1">Price Low-to-High</div>
-            <div class="item" data-value="0">Price High-to-Low</div>
-          </div>
-        </div>
-      </div>
   
-
-      <div class="eleven wide column">
+      <div class="sixteen wide column">
   
         <div class="three column doubling ui grid center aligned">
           <!-- Row 1 -->
@@ -247,8 +232,6 @@
 
       </div>
 
-
-
         <div class="ui centered grid">
           <div class="sixteen wide column">
             <p class="dropdown-label">VIEW CATEGORY</p>
@@ -288,7 +271,7 @@
       <p class="item-title">Sterling Silver Art Nouveau Design Cuff</p>
       <p class="item-subtitle">Circa 1960.</p>
       <p class="item-price">$299.00</p>
-      <button class="ui blue button">Inquire</button>
+      <a class="ui blue button" href="mailto:linda@jewelsbythesea.biz?subject=Estate%20Jewelry%20Inquiry">Inquire</a>
     </div>
  </div>
 </div>
@@ -301,7 +284,7 @@
       <p class="item-title">Onyx & Marcasite Ring</p>
       <p class="item-subtitle">Sterling silver onyx and marcasite ring. Circa 1970.</p>
       <p class="item-price">$89.00</p>
-      <button class="ui blue button">Inquire</button>
+      <a class="ui blue button" href="mailto:linda@jewelsbythesea.biz?subject=Estate%20Jewelry%20Inquiry">Inquire</a>
     </div>
  </div>
 </div>
@@ -314,7 +297,7 @@
       <p class="item-title">'Hobe' Gold-Tone Bracelet</p>
       <p class="item-subtitle">Signed 'Hobe' gold tone and crystal bracelet. Circa 1950.</p>
       <p class="item-price">$129.00</p>
-      <button class="ui blue button">Inquire</button>
+      <a class="ui blue button" href="mailto:linda@jewelsbythesea.biz?subject=Estate%20Jewelry%20Inquiry">Inquire</a>
     </div>
  </div>
 </div>
@@ -327,7 +310,7 @@
       <p class="item-title">10 Karat Yellow Gold Lavalier Chain</p>
       <p class="item-subtitle">With seed pearl and synthetic spinel on a gold filled chain. Circa 1920.</p>
       <p class="item-price">$229.00</p>
-      <button class="ui blue button">Inquire</button>
+      <a class="ui blue button" href="mailto:linda@jewelsbythesea.biz?subject=Estate%20Jewelry%20Inquiry">Inquire</a>
     </div>
  </div>
 </div>
@@ -340,7 +323,7 @@
       <p class="item-title">Signed Renoir of California Copper Necklace</p>
       <p class="item-subtitle">Circa 1960.</p>
       <p class="item-price">$129.00</p>
-      <button class="ui blue button">Inquire</button>
+      <a class="ui blue button" href="mailto:linda@jewelsbythesea.biz?subject=Estate%20Jewelry%20Inquiry">Inquire</a>
     </div>
  </div>
 </div>
@@ -353,7 +336,7 @@
       <p class="item-title">18 Karat Yellow Gold Art Deco Sapphire Ring</p>
       <p class="item-subtitle">Circa 1920.</p>
       <p class="item-price">$1,119.00</p>
-      <button class="ui blue button">Inquire</button>
+      <a class="ui blue button" href="mailto:linda@jewelsbythesea.biz?subject=Estate%20Jewelry%20Inquiry">Inquire</a>
     </div>
  </div>
 </div>
@@ -366,7 +349,7 @@
       <p class="item-title">Four Strand Adjustable Short Necklace</p>
       <p class="item-subtitle">Circa 1950.</p>
       <p class="item-price">$49.00</p>
-      <button class="ui blue button">Inquire</button>
+      <a class="ui blue button" href="mailto:linda@jewelsbythesea.biz?subject=Estate%20Jewelry%20Inquiry">Inquire</a>
     </div>
  </div>
 </div>
@@ -380,7 +363,7 @@
       <p class="item-title">Sterling Silver Lapis Earrings</p>
       <p class="item-subtitle">Circa 1970.</p>
       <p class="item-price">$39.00</p>
-      <button class="ui blue button">Inquire</button>
+      <a class="ui blue button" href="mailto:linda@jewelsbythesea.biz?subject=Estate%20Jewelry%20Inquiry">Inquire</a>
     </div>
  </div>
 </div>
@@ -393,7 +376,7 @@
       <p class="item-title">Hand Painted Buttons</p>
       <p class="item-subtitle">Set of 6. Circa 1960.</p>
       <p class="item-price">$39.00</p>
-      <button class="ui blue button">Inquire</button>
+      <a class="ui blue button" href="mailto:linda@jewelsbythesea.biz?subject=Estate%20Jewelry%20Inquiry">Inquire</a>
     </div>
  </div>
 </div>
