--- a/favorites.html
+++ b/favorites.html
@@ -125,24 +125,9 @@
   <div class="ui main container">
     <h1 class="script">Linda's Favorites</h1> 
     <p><i class="fa fa-quote-left fa-2x quote"></i><i>From fine to funky, these treasures are some of my personal favorites and make my mouth water!</i></p>
-    <div class="ui stackable grid">
+    <div class="ui stackable grid">  
 
-      <div class="five wide column">
-        <p class="dropdown-label">REFINE PRODUCTS</p>
-        <div class="ui selection dropdown">
-          <input type="hidden" name="refine">
-          <i class="dropdown icon"></i>
-          <div class="default text">Newest</div>
-          <div class="menu">
-            <div class="item" data-value="2">Newest</div>
-            <div class="item" data-value="1">Price Low-to-High</div>
-            <div class="item" data-value="0">Price High-to-Low</div>
-          </div>
-        </div>
-      </div>
-  
-
-      <div class="eleven wide column">
+      <div class="sixteen wide column">
   
         <div class="three column doubling ui grid center aligned">
           <!-- Row 1 -->
