--- a/rings.html
+++ b/rings.html
@@ -119,24 +119,25 @@
 </header>
 <!-- END HEADER -->
 
+
 <div class="pusher">
   <!-- Main Content -->
   <div class="ui main container">
-    <h1 class="script">Bracelets</h1> 
-    <p><i class="fa fa-quote-left fa-2x quote"></i><i>Bracelets can be simple to sassy to sparkly &mdash; a good way to accent any outfit!</i></p>   
+    <h1 class="script">Rings</h1> 
+    <p><i class="fa fa-quote-left fa-2x quote"></i><i>Rings express individual style and give us the pleasure of their beauty while we are wearing them!</i></p>   
     <div class="ui stackable grid">
 
       <div class="sixteen wide column">
-    
+
         <div class="three column doubling ui grid center aligned">
           <!-- Row 1 -->
           <div class="column">
             <div id="item1" class="ui card">
               <div class="image">
-                <img src="images/bracelets/1-thumb.png">
+                <img src="images/rings/1-thumb.png">
               </div>
               <div class="content">
-                <a class="header">Funky Ruby & Watch</a>
+                <a class="header">Tricolor Amethyst Ring</a>
               </div>
             </div>
           </div>
@@ -144,10 +145,10 @@
           <div class="column">
             <div id="item2" class="ui card">
               <div class="image">
-                <img src="images/bracelets/2-thumb.png">
+                <img src="images/rings/2-thumb.png">
               </div>
               <div class="content">
-                <a class="header">Cabochon Onyx Cuff</a>
+                <a class="header">Silver & Gold Plate Ring</a>
               </div>
             </div>
           </div>
@@ -155,21 +156,10 @@
           <div class="column">
             <div id="item3" class="ui card">
               <div class="image">
-                <img src="images/bracelets/3-thumb.png">
+                <img src="images/rings/3-thumb.png">
               </div>
               <div class="content">
-                <a class="header">Silver Textured Link</a>
-              </div>
-            </div>
-          </div>
-
-          <div class="column">
-            <div id="item4" class="ui card">
-              <div class="image">
-                <img src="images/bracelets/4-thumb.png">
-              </div>
-              <div class="content">
-                <a class="header">Fire Opal Link</a>
+                <a class="header">Silver & Peridot Ring</a>
               </div>
             </div>
           </div>
@@ -177,10 +167,10 @@
           <div class="column">
             <div id="item5" class="ui card">
               <div class="image">
-                <img src="images/bracelets/5-thumb.png">
+                <img src="images/rings/5-thumb.png">
               </div>
               <div class="content">
-                <a class="header">Prehnite Stretch Bracelet</a>
+                <a class="header">Silver & Fire Opal Ring</a>
               </div>
             </div>
           </div>
@@ -188,10 +178,10 @@
           <div class="column">
             <div id="item6" class="ui card">
               <div class="image">
-                <img src="images/bracelets/6-thumb.png">
+                <img src="images/rings/6-thumb.png">
               </div>
               <div class="content">
-                <a class="header">Turquoise Link Bracelet</a>
+                <a class="header">White Gold, Jade, & Diamond Ring</a>
               </div>
             </div>
           </div>
@@ -199,10 +189,10 @@
           <div class="column">
             <div id="item7" class="ui card">
               <div class="image">
-                <img src="images/bracelets/7-thumb.png">
+                <img src="images/rings/7-thumb.png">
               </div>
               <div class="content">
-                <a class="header">Lavender Jade Bracelet</a>
+                <a class="header">Rutilated Quartz Ring</a>
               </div>
             </div>
           </div>
@@ -210,26 +200,15 @@
           <div class="column">
             <div id="item8" class="ui card">
               <div class="image">
-                <img src="images/bracelets/8-thumb.png">
+                <img src="images/rings/8-thumb.png">
               </div>
               <div class="content">
-                <a class="header">Quartz & Agate Bracelet</a>
+                <a class="header">Gold & Inlay Shell Ring</a>
               </div>
             </div>
           </div>
 
-          <div class="column">
-            <div id="item9" class="ui card">
-              <div class="image">
-                <img src="images/bracelets/9-thumb.png">
-              </div>
-              <div class="content">
-                <a class="header">Silver & Cubic Zirconia Bracelet</a>
-              </div>
-            </div>
-          </div>
-
-        </div>
+      </div>
 
         <div class="ui centered grid">
           <div class="sixteen wide column">
@@ -237,13 +216,13 @@
             <div class="ui selection dropdown bottom-grid-links">
               <input type="hidden" name="refine">
               <i class="dropdown icon"></i>
-              <div class="default text">Bracelets</div>
+              <div class="default text">Rings</div>
               <div class="menu">
                 <a class="item" href="estatevintage.html">Estate & Vintage</a>
                 <a class="item" href="artists.html">Artists</a>
-                <a class="item" href="rings.html">Rings</a>
+                <!--<a class="item" href="rings.html">Rings</a>-->
                 <a class="item" href="earrings.html">Earrings</a>
-                <!--<a class="" href="bracelets.html">Bracelets</a>-->
+                <a class="item" href="bracelets.html">Bracelets</a>
                 <a class="item" href="scarves.html">Scarves</a>
                 <a class="item" href="necklaces.html">Necklaces & Pendants</a>
                 <a class="item" href="favorites.html">Linda's Favorites</a>
@@ -254,9 +233,7 @@
         </div>
 
       </div>
-      
     </div>
-
   </div>
 
 <a href="#0" id="toTop">
@@ -267,12 +244,12 @@
 <div class="ui modal item1">
   <i class="close icon"></i>
   <div class="content">
-    <img class="ui centered medium image" src="images/bracelets/1-full.png">
+    <img class="ui centered medium image" src="images/rings/1-full.png">
     <div class="item-desc">
-      <p class="item-title">Funky Ruby & Watch Bracelet</p>
-      <p class="item-subtitle">Funky and fun handmade raw ruby and recycled watches.</p>
-      <p class="item-price">$229.00</p>
-      <button class="ui blue button">Inquire</button>
+      <p class="item-title">Tricolor Amethyst Ring</p>
+      <p class="item-subtitle">Adjustable tricolor amethyst ring.</p>
+      <p class="item-price">$59.00</p>
+      <a class="ui blue button" href="mailto:linda@jewelsbythesea.biz?subject=Ring%20Inquiry">Inquire</a>
     </div>
  </div>
 </div>
@@ -280,12 +257,12 @@
 <div class="ui modal item2">
   <i class="close icon"></i>
   <div class="content">
-    <img class="ui centered medium image" src="images/bracelets/2-full.png">
+    <img class="ui centered medium image" src="images/rings/2-full.png">
     <div class="item-desc">
-      <p class="item-title">Cabochon Onyx Cuff</p>
-      <p class="item-subtitle">Handmade tricolor metal with onyx cabochon cuff.</p>
-      <p class="item-price">$59.00</p>
-      <button class="ui blue button">Inquire</button>
+      <p class="item-title">Sterling & Gold Plate Ring</p>
+      <p class="item-subtitle">Designer sterling silver & gold plate ring.</p>
+      <p class="item-price">$99.00</p>
+      <a class="ui blue button" href="mailto:linda@jewelsbythesea.biz?subject=Ring%20Inquiry">Inquire</a>
     </div>
  </div>
 </div>
@@ -293,25 +270,12 @@
 <div class="ui modal item3">
   <i class="close icon"></i>
   <div class="content">
-    <img class="ui centered medium image" src="images/bracelets/3-full.png">
+    <img class="ui centered medium image" src="images/rings/3-full.png">
     <div class="item-desc">
-      <p class="item-title">Sterling Silver Textured Link</p>
-      <p class="item-subtitle">Textured link bracelet made from sterling silver.</p>
+      <p class="item-title">Sterling Silver & Peridot Ring</p>
+      <p class="item-subtitle">Ring made of sterling silver and peridot.</p>
       <p class="item-price">$59.00</p>
-      <button class="ui blue button">Inquire</button>
-    </div>
- </div>
-</div>
-
-<div class="ui modal item4">
-  <i class="close icon"></i>
-  <div class="content">
-    <img class="ui centered medium image" src="images/bracelets/4-full.png">
-    <div class="item-desc">
-      <p class="item-title">Fire Opal Link</p>
-      <p class="item-subtitle">Sterling silver and fire opal 7" link bracelet./p>
-      <p class="item-price">$99.00</p>
-      <button class="ui blue button">Inquire</button>
+      <a class="ui blue button" href="mailto:linda@jewelsbythesea.biz?subject=Ring%20Inquiry">Inquire</a>
     </div>
  </div>
 </div>
@@ -319,12 +283,12 @@
 <div class="ui modal item5">
   <i class="close icon"></i>
   <div class="content">
-    <img class="ui centered medium image" src="images/bracelets/5-full.png">
+    <img class="ui centered medium image" src="images/rings/5-full.png">
     <div class="item-desc">
-      <p class="item-title">Prehnite Stretch Bracelet</p>
-      <p class="item-subtitle">Wide stretch bracelet made from prehnite.</p>
-      <p class="item-price">$39.00</p>
-      <button class="ui blue button">Inquire</button>
+      <p class="item-title">Sterling Silver & Fire Opal Ring</p>
+      <p class="item-subtitle">Ring made of sterling silver and fire opal.</p>
+      <p class="item-price">$69.00</p>
+      <a class="ui blue button" href="mailto:linda@jewelsbythesea.biz?subject=Ring%20Inquiry">Inquire</a>
     </div>
  </div>
 </div>
@@ -332,12 +296,12 @@
 <div class="ui modal item6">
   <i class="close icon"></i>
   <div class="content">
-    <img class="ui centered medium image" src="images/bracelets/6-full.png">
+    <img class="ui centered medium image" src="images/rings/6-full.png">
     <div class="item-desc">
-      <p class="item-title">Turquoise Link Bracelet</p>
-      <p class="item-subtitle">Sterling silver and turquoise link.</p>
-      <p class="item-price">$129.00</p>
-      <button class="ui blue button">Inquire</button>
+      <p class="item-title">White Gold, Jade, & Diamond Ring</p>
+      <p class="item-subtitle">14 Karat white gold, jade, and diamond ring.</p>
+      <p class="item-price">$799.00</p>
+      <a class="ui blue button" href="mailto:linda@jewelsbythesea.biz?subject=Ring%20Inquiry">Inquire</a>
     </div>
  </div>
 </div>
@@ -345,50 +309,36 @@
 <div class="ui modal item7">
   <i class="close icon"></i>
   <div class="content">
-    <img class="ui centered medium image" src="images/bracelets/7-full.png">
+    <img class="ui centered medium image" src="images/rings/7-full.png">
     <div class="item-desc">
-      <p class="item-title">Lavender Jade Bracelet</p>
-      <p class="item-subtitle">Bracelet made from sterling silver and lavender jade.</p>
-      <p class="item-price">$139.00</p>
-      <button class="ui blue button">Inquire</button>
+      <p class="item-title">Rutilated Quartz Ring</p>
+      <p class="item-subtitle">Handmade rutilated quartz ring, size 8.</p>
+      <p class="item-price">$399.00</p>
+      <a class="ui blue button" href="mailto:linda@jewelsbythesea.biz?subject=Ring%20Inquiry">Inquire</a>
     </div>
  </div>
 </div>
+
 
 <div class="ui modal item8">
   <i class="close icon"></i>
   <div class="content">
-    <img class="ui centered medium image" src="images/bracelets/8-full.png">
+    <img class="ui centered medium image" src="images/rings/8-full.png">
     <div class="item-desc">
-      <p class="item-title">Chalcedony Quartz & Agate Bracelet</p>
-      <p class="item-subtitle">Chalcedony quartz and agate bracelet made by Nicole.</p>
-      <p class="item-price">$49.00</p>
-      <button class="ui blue button">Inquire</button>
+      <p class="item-title">Gold & Inlay Shell Ring</p>
+      <p class="item-subtitle">Gold with shell inlay ring.</p>
+      <p class="item-price">$329.00</p>
+      <a class="ui blue button" href="mailto:linda@jewelsbythesea.biz?subject=Ring%20Inquiry">Inquire</a>
     </div>
  </div>
 </div>
 
-<div class="ui modal item9">
-  <i class="close icon"></i>
-  <div class="content">
-    <img class="ui centered medium image" src="images/bracelets/9-full.png">
-    <div class="item-desc">
-      <p class="item-title">Sterling Silver & Cubic Zirconia Bracelet</p>
-      <p class="item-subtitle">7" with silver clasp.</p>
-      <p class="item-price">$79.00</p>
-      <button class="ui blue button">Inquire</button>
-    </div>
- </div>
-</div>
-
-
-  <ng-include src="'partials/footer.html'"></ng-include>
-
-  <script src='http://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js'></script>
-  <script src='http://oss.maxcdn.com/semantic-ui/2.1.4/semantic.min.js'></script>
-  <script src='app.js'></script>
-
-  <script>
+<ng-include src="'partials/footer.html'"></ng-include>
+<script src='http://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js'></script>
+<script src="classie.js"></script>
+<script src='http://oss.maxcdn.com/semantic-ui/2.1.4/semantic.min.js'></script>
+<script src='app.js'></script>
+<script>
       function init() {
         var distanceY = window.pageYOffset,
             shrinkOn = 200,
