--- a/earrings.html
+++ b/earrings.html
@@ -127,21 +127,7 @@
     <p><i class="fa fa-quote-left fa-2x quote"></i><i>Earrings are the mainstay of our jewelry wardrobe! Fun and unique earrings create the mood for an outfit.</i></p>   
     <div class="ui stackable grid">
 
-      <div class="five wide column">
-        <p class="dropdown-label">REFINE PRODUCTS</p>
-        <div class="ui selection dropdown">
-          <input type="hidden" name="refine">
-          <i class="dropdown icon"></i>
-          <div class="default text">Newest</div>
-          <div class="menu">
-            <div class="item" data-value="2">Newest</div>
-            <div class="item" data-value="1">Price Low-to-High</div>
-            <div class="item" data-value="0">Price High-to-Low</div>
-          </div>
-        </div>
-      </div>
-
-      <div class="eleven wide column">
+      <div class="sixteen wide column">
     
         <div class="three column doubling ui grid center aligned">
 
