--- a/faq.html
+++ b/faq.html
@@ -161,7 +161,7 @@
         <p>Does Jewels By The Sea create custom jewelry?</p>
       </div>
       <div class="ui secondary segment">
-        <p><b>Yes</b> &mdash; with my Graduate Jeweler status and over 3 years in the jewelry business, I LOVE to help people create that unique and wonderful piece of jewelry just for you. I have custom designed wedding sets, right hand rings, pendants, bracelets, earrings, and fashion jewelry for many of my clients throughout the years. It gives me great joy to help you create a unique piece of jewelry that will become an heirloom for generations to come.</p>
+        <p><b>Yes</b> &mdash; with my Graduate Jeweler status and over 3 years in the jewelry business, I LOVE to help people create that unique and wonderful piece of jewelry just for you. I have custom designed wedding sets, right hand rings, and fashion jewelry for many of my clients throughout the years. It gives me great joy to help you create a unique piece of jewelry that will become an heirloom for generations to come.</p>
       </div>
     </div>
 
@@ -172,7 +172,7 @@
       </div>
       <div class="ui secondary segment">
         <p><b>Yes</b>, we have excellent jewelry and watch repair. I have used my bench jeweler ( a repair and custom design genius) and my watchmaker for over 30 years (both people were the "go to" guys for the jewelry chain I worked at for 22 years).</p>
-        <p>We repair all kinds of jewelry and watches including Estate pieces. In the modern world, many jewelers say no to estate jewelry repair because of the risks involved, but we say yes, and have returned many family heirloom pieces back into wearable treasures. We also will work on pieces that may not have a lot of intrinsic value, but mean something very special to you.</p>
+        <p>We repair all kinds of jewelry and watches. In the modern world, many jewelers say no to estate jewelry repair because of the risks involved, but we say yes, and have returned many family heirloom pieces back into wearable treasures. We also will work on pieces that may not have a lot of intrinsic value, but mean something very special to you.</p>
       </div>
     </div>
 
