--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
             <div class="ui card">
               <div class="grid-hover">Artists</div>
               <a class="image grid-hover-img" href="local.html">
-                <img src="images/artists/1-thumb.png">
+                <img src="images/artists/local/1-thumb.png">
               </a>
             </div>
           </div>
