--- a/scarves.html
+++ b/scarves.html
@@ -127,23 +127,8 @@
     <p><i class="fa fa-quote-left fa-2x quote"></i><i>Scarves are delightful for individual expression.</i></p>   
     <div class="ui stackable grid">
 
-      <div class="five wide column">
-        <p class="dropdown-label">REFINE PRODUCTS</p>
-        <div class="ui selection dropdown">
-          <input type="hidden" name="refine">
-          <i class="dropdown icon"></i>
-          <div class="default text">Newest</div>
-          <div class="menu">
-            <div class="item" data-value="2">Newest</div>
-            <div class="item" data-value="1">Price Low-to-High</div>
-            <div class="item" data-value="0">Price High-to-Low</div>
-          </div>
-        </div>
-      </div>
+      <div class="sixteen wide column">
 
-
-      <div class="eleven wide column">
-    
         <div class="three column doubling ui grid center aligned">
 
             <!-- Row 1 -->
